tests/specs/fmt/parse_error/check_parse_error.out
Error checking: [WILDCARD]parse_error.ts
  SyntaxError: Expected '{', got '<eof>'
    |
  2 | class Test
    | ~~~~~
      at file:///[WILDCARD]parse_error.ts:2:1
error: Found 1 not formatted file in 1 file
